Add folder with files

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <a href="dashboard.html" class="btn-get-started">
-                <button class="get-started-btn">
+                <button class="get-started-btn" href="dashboard.html">
                     <p>Get Started</p>
                     
                 </button>
@@ -221,8 +221,8 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#why-choose">About Us</a></li>
+                    <li><a href="#mission">Mission</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
