--- a/dashboard.html
+++ b/dashboard.html
@@ -114,8 +114,8 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="#home">Home</a></li>
-
-                        <li><a href="#about">About</a></li>
+                        <li><a href="#why-choose">About Us</a></li>
+                        <li><a href="#mission">Mission</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
